--- a/css/index.css
+++ b/css/index.css
@@ -149,3 +149,18 @@ body {
     -webkit-transform:scale(1.2); /* Safari and Chrome */
     -o-transform:scale(1.2); /* Opera */
 }
+.ani:hover {
+    transform:scale(1.05);
+    -ms-transform:scale(1.05); /* IE 9 */
+    -moz-transform:scale(1.05); /* Firefox */
+    -webkit-transform:scale(1.05); /* Safari and Chrome */
+    -o-transform:scale(1.05); /* Opera */
+}
+
+.imageLink{
+ text-align:center;
+}
+
+.imageLink img{
+  display:block;
+}
