--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@
 }
 
 .logo {
-   background-image: url("../img/my_logo.png");
+   //background-image: url("../img/my_logo.png");
    width:85px;
    height:87px;   
 }
@@ -160,6 +160,7 @@ body {
   font-family: 'Schoolbell', arial, serif;
   font-weight: bold;
   font-size: 200%;
+  background: #151515 url("../img/bkg.png") 0 0;
 }
 
 p {   
