--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ p {
 .experience-left {
     float: left;
     width: 30%;
-    background: #ec407a;
+    background: #2b2829;
     text-align: center;
     padding: 2em 0;
     border: 2px solid #ec407a;
