--- a/css/style.css
+++ b/css/style.css
@@ -645,7 +645,7 @@ p.agile-br {
     border: none;
     box-shadow: none;
     position: absolute;
-    background: #ec407a;
+    background: black;
     width: 100%;
     z-index: 9;
 }
